@@ -12,6 +12,7 @@
 </section>
 
 <section><title>Create two-mode networks</title>
+<!-- doxrox-include igraph_create_bipartite -->
 <!-- doxrox-include igraph_full_bipartite -->
 </section>
 
