@@ -1,0 +1,8 @@
+0 1
+0 3
+1 2
+1 4
+1 6
+3 4
+5 6
+6 5
